--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('./assets/fonts/helvetica-neue-medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 .App {
   text-align: center;
 }
@@ -47,4 +53,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 16px;
+}
+
+.Home-Title{
+  font-family: 'Helvetica Neue';
 }
